--- a/single-price-grid-component-master/mystyle.scss
+++ b/single-price-grid-component-master/mystyle.scss
@@ -13,17 +13,49 @@ body {
 
 }
 
+/* Small screens (default) */
+html {
+    font-size: 100%;
+}
+
+/* Medium screens (640px) */
+@media (min-width: 40rem) {
+    html {
+        font-size: 112%;
+    }
+}
+
+/* Large screens (1024px) */
+@media (min-width: 64rem) {
+    html {
+        font-size: 120%;
+    }
+}
+
+*,
+*:before,
+*:after {
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+
 .Aligner {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0 auto;
+    max-width: 48rem;
+    width: 90%;
+    height: 100vh;
 }
 
 .content {
     max-width: 50%;
     box-shadow: 0 0 10px rgba(78, 10, 10, 0.37);
     border-radius: $roundness;
-    
+
     display: grid;
     grid-template-columns: 50px 50px 50px 50px;
     grid-template-rows: auto;
@@ -48,6 +80,7 @@ body {
     h2 {
         color: $bright_yellow;
     }
+
     padding: 20px;
 }
 
@@ -59,6 +92,7 @@ body {
     background-color: $cyan;
     display: flex;
     flex-direction: column;
+
     .price {
         color: white;
         font-size: 24px;
@@ -84,6 +118,7 @@ body {
     background-color: lighten($color: $cyan, $amount: 10);
     padding: 30px;
     grid-area: footer-right;
+
     ul {
         padding: 0px;
         list-style: none;
