--- a/single-price-grid-component-master/mystyle.css
+++ b/single-price-grid-component-master/mystyle.css
@@ -5,6 +5,32 @@ body {
   background-color: #e5eff5;
 }
 
+/* Small screens (default) */
+html {
+  font-size: 100%;
+}
+
+/* Medium screens (640px) */
+@media (min-width: 40rem) {
+  html {
+    font-size: 112%;
+  }
+}
+
+/* Large screens (1024px) */
+@media (min-width: 64rem) {
+  html {
+    font-size: 120%;
+  }
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 .Aligner {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -15,6 +41,10 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  margin: 0 auto;
+  max-width: 48rem;
+  width: 90%;
+  height: 100vh;
 }
 
 .content {
