--- a/single-price-grid-component-master/mystyle.css
+++ b/single-price-grid-component-master/mystyle.css
@@ -17,10 +17,46 @@ html {
   }
 }
 
+@media (max-width: 600px) {
+  .content {
+    border-radius: 10px;
+  }
+  .join {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+  .why_us {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+}
+
 /* Large screens (1024px) */
 @media (min-width: 64rem) {
   html {
     font-size: 120%;
+  }
+  .content {
+    border-radius: 10px;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 50px 50px 50px 50px;
+        grid-template-columns: 50px 50px 50px 50px;
+    -ms-grid-rows: auto;
+        grid-template-rows: auto;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: "header header" "footer-left footer-right";
+  }
+  .join {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+  }
+  .subscription {
+    border-bottom-left-radius: 10px;
+  }
+  .why_us {
+    border-bottom-right-radius: 10px;
   }
 }
 
@@ -48,27 +84,12 @@ html {
 }
 
 .content {
-  max-width: 50%;
+  max-width: 100%;
   -webkit-box-shadow: 0 0 10px rgba(78, 10, 10, 0.37);
           box-shadow: 0 0 10px rgba(78, 10, 10, 0.37);
-  border-radius: 10px;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 50px 50px 50px 50px;
-      grid-template-columns: 50px 50px 50px 50px;
-  -ms-grid-rows: auto;
-      grid-template-rows: auto;
-  -ms-grid-columns: 1fr 1fr;
-      grid-template-columns: 1fr 1fr;
-      grid-template-areas: "header header" "footer-left footer-right";
 }
 
 .join {
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 2;
   grid-area: header;
   color: #98a6bd;
   background-color: white;
@@ -84,10 +105,7 @@ html {
 }
 
 .subscription {
-  border-bottom-left-radius: 10px;
   padding: 30px;
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
   grid-area: footer-left;
   color: white;
   background-color: #2ab2af;
@@ -119,12 +137,9 @@ html {
 }
 
 .why_us {
-  border-bottom-right-radius: 10px;
   color: white;
   background-color: #3dd1cf;
   padding: 30px;
-  -ms-grid-row: 2;
-  -ms-grid-column: 2;
   grid-area: footer-right;
 }
 
