--- a/single-price-grid-component-master/mystyle.css
+++ b/single-price-grid-component-master/mystyle.css
@@ -19,9 +19,11 @@ html {
 
 @media (max-width: 600px) {
   .content {
+    margin-top: 30px;
     border-radius: 10px;
   }
   .join {
+    margin-top: 30px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
   }
