--- a/single-price-grid-component-master/mystyle.css
+++ b/single-price-grid-component-master/mystyle.css
@@ -23,7 +23,6 @@ html {
     border-radius: 10px;
   }
   .join {
-    margin-top: 30px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
   }
@@ -148,5 +147,27 @@ html {
 .why_us ul {
   padding: 0px;
   list-style: none;
+}
+
+footer {
+  height: 50px;
+  display: block;
+}
+
+.Aligner {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.fix_footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  min-height: 100vh;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 /*# sourceMappingURL=mystyle.css.map */
