--- a/single-price-grid-component-master/mystyle.scss
+++ b/single-price-grid-component-master/mystyle.scss
@@ -32,8 +32,6 @@ html {
         border-radius: $roundness;
     }
     .join {
-        
-        margin-top: 30px;
         border-top-left-radius: $roundness;
         border-top-right-radius: $roundness;
     }
@@ -160,3 +158,17 @@ html {
 // .rule-1 {
 //   value: $variable;
 // }
+
+footer {
+    height: 50px;
+    display: block;
+}
+
+.Aligner{
+    flex: 1;
+}
+.fix_footer{
+    display: flex;
+  min-height: 100vh;
+  flex-direction: column;
+}
