--- a/fylo-landing-page/main.scss
+++ b/fylo-landing-page/main.scss
@@ -72,7 +72,7 @@ button {
 }
 
 .line {
-    max-width: $container-width;
+    max-width: 100%;
     clip-path: ellipse(50% 69.26% at 50.00% 102.31%);
     background-color: $light_grayish_blue;
     height: 200px;
@@ -234,13 +234,26 @@ button {
         }
     }
     .columns{
+        .contacts{
+            margin-top: 1rem;
+        }
+        .icons{
+            margin-top: 1rem;
+        }
         display: flex;
         flex-direction: row;
+        padding-bottom: 1rem;
+        padding-top: 0px;
+        ul{
+            padding: 0px;
+        }
         .column{
             width: 25%;
             display: flex;
             flex-direction: column;
+            
         }
+        
         li{
             padding-bottom: 1rem;
         }
