--- a/fylo-landing-page/main.css
+++ b/fylo-landing-page/main.css
@@ -48,7 +48,7 @@ a {
 }
 
 .header .menu li {
-  padding-left: 4em;
+  padding-left: 3em;
 }
 
 @media (max-width: 600px) {
@@ -59,6 +59,7 @@ a {
             flex-direction: column;
   }
   .header .menu li {
+    padding: 5px;
     padding-left: 0px;
   }
 }
